# snkrs-pass-checker

./: .env.sample  README.md  pyproject.toml
database/: url.csv
src/: argument_parser.py  client.py  crawler.py  main.py  message.py  slack_bot.py  utils.py
